# spotipy

./: README.md  main.py  pyproject.toml
api/: authorization.py  player.py
auth/: authorization.py
commands/: spotify_player.py
handler/: auth_json.py
spotiplay/: main.py
spotiplay/api/: authorization.py  player.py
spotiplay/commands/: spotify_player.py
