[tool.poetry]
name = "spotiplay"
version = "0.1.0"
description = "Simple CLI Spotify app :3"
authors = ["Piotr Jelonek <piotrek.jelonek@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.1"
userpaths = "^0.1.3"
requests = "^2.32.3"

[tool.poetry.scripts]
spotiplay = "spotiplay.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
